test/functions/deitz/default/test_default4-error.good
test_default4-error.chpl:25: error: ambiguous call 'foo()'
test_default4-error.chpl:1: note: candidates are: foo(i: int = 1, j: real = 2.0, k: string = "three")
test_default4-error.chpl:5: note:                 foo(i: real = 1.0, j: string = "two", k: int = 3)
test_default4-error.chpl:9: note:                 foo(i: string = "one", j: int = 2, k: real = 3.0)
